package Launcher;

import MainFrame.MainFrame;

public class MyApp {
    public static void main(String[] args) {
        // 2015270434 김동훈
        MainFrame mainFrame = new MainFrame();
        mainFrame.init();
        mainFrame.setVisible(true);
    }

}
