@startuml

title __PROJECT1_2015270434's Class Diagram__\n

  namespace Agent {
    abstract class Agent.Agent {
    }
  }
  

  namespace Agent {
    class Agent.Computer {
    }
  }
  

  namespace Agent {
    class Agent.Player {
    }
  }
  

  namespace Board {
    class Board.BlueMarbleBoard {
    }
  }
  

  namespace Board {
    class Board.Tile {
    }
  }
  

  namespace City {
    class City.City {
    }
  }
  

  namespace Constants {
    class Constants.Constants {
    }
  }
  

  namespace Dice {
    class Dice.Dice {
    }
  }
  

  namespace Launcher {
    class Launcher.MyApp {
    }
  }
  

  namespace MainFrame {
    class MainFrame.MainFrame {
    }
  }
  

  namespace MainFrame {
    class MainFrame.MainPanel {
    }
  }
  

  Agent.Computer -up-|> Agent.Agent
  Agent.Player -up-|> Agent.Agent
  Board.BlueMarbleBoard o-- Agent.Agent : computer
  Board.BlueMarbleBoard o-- Dice.Dice : dice
  Board.BlueMarbleBoard o-- Agent.Agent : player
  Board.Tile o-- City.City : city
  Board.Tile o-- Constants.Constants.TILE_TYPE : tileType
  City.City o-- Constants.Constants.CITY_STATE : cityState
  MainFrame.MainFrame -up-|> javax.swing.JFrame
  MainFrame.MainFrame o-- MainFrame.MainPanel : mainPanel
  MainFrame.MainPanel -up-|> javax.swing.JPanel
  MainFrame.MainPanel o-- Board.BlueMarbleBoard : board


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
